--- a/RecruitingTaskUI/src/app/app.component.html
+++ b/RecruitingTaskUI/src/app/app.component.html
@@ -1,5 +1,20 @@
 <!-- <router-outlet></router-outlet> -->
-<main>
-  <aside></aside>
-  <section><app-dashboard></app-dashboard></section>
-</main>
+<!-- <main>
+  <div class="header"><header></header></div>
+  <div class="main-content">
+    <aside>
+      <nav></nav>
+    </aside>
+    <section><app-dashboard></app-dashboard></section>
+  </div>
+</main> -->
+
+<div class="main-container">
+  <div class="header"></div>
+  <div class="content">
+    <div class="nav"></div>
+    <div class="main-content">
+      <app-dashboard></app-dashboard>
+    </div>
+  </div>
+</div>
