--- a/RecruitingTaskUI/src/app/app.component.html
+++ b/RecruitingTaskUI/src/app/app.component.html
@@ -10,9 +10,15 @@
 </main> -->
 
 <div class="main-container">
-  <div class="header"></div>
+  <div class="header">
+    <img src="../assets/logo1.png" alt="Baader logo" />
+  </div>
   <div class="content">
-    <div class="nav"></div>
+    <div class="nav">
+      <ul>
+        <li>Dashboard</li>
+      </ul>
+    </div>
     <div class="main-content">
       <app-dashboard></app-dashboard>
     </div>
