--- a/RecruitingTaskUI/src/app/dashboard/dashboard.component.scss
+++ b/RecruitingTaskUI/src/app/dashboard/dashboard.component.scss
@@ -10,13 +10,12 @@ $sec-color-blue6: #ddf2fd;
 
 .container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat (auto-fit, minmax(1fr, 2fr));
+  grid-gap: 1em;
   height: 100%;
 
   div {
-    border-left: 0.5px solid gray;
-    border-bottom: 0.5px dotted gray;
     color: white;
     background-color: black;
     padding: 5px;
@@ -24,27 +23,61 @@ $sec-color-blue6: #ddf2fd;
 }
 
 .data-container {
-  border-bottom: 0.25px solid gray;
-  border-left: none;
   display: grid;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-template-rows: repeat(4, 1fr);
+  grid-row: 1/3;
+  grid-column: 1/2;
   width: 100%;
+  align-items: stretch;
+  align-content: space-around;
+  grid-gap: 1em;
+  background-color: #9bbec8;
+  color: black;
 
   div.entry {
-    border-bottom: 0.25px solid gray;
+    background-color: #9bbec8;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(4, 1fr);
+    align-items: center;
+    border: 1px solid grey;
+    font-weight: bolder;
+    border-radius: 8px;
     label {
       display: flex;
-      justify-content: start;
-      align-items: end;
+      justify-content: center;
+      font-weight: 100;
+      font-size: smaller;
     }
     .val {
+      background-color: #9bbec8;
       display: flex;
-      justify-content: end;
-      align-items: end;
-      border: none;
-      padding-right: 15px;
+      justify-content: center;
+      align-items: center;
+      grid-row: 1/4;
     }
   }
+}
+
+.weight-container {
+  grid-row: 1/2;
+  grid-column: 2/4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.grade-container {
+  grid-row: 2/2;
+  grid-column: 2/3;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.weight-chart-container {
+  grid-row: 2/2;
+  grid-column: 3/4;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
 }
