Dashboard changes - CSS

--- a/RecruitingTaskUI/src/app/app.component.html
+++ b/RecruitingTaskUI/src/app/app.component.html
@@ -11,12 +11,23 @@
 
 <div class="main-container">
   <div class="header">
-    <img src="../assets/logo1.png" alt="Baader logo" />
+    <!--  <img src="../assets/logo1.png" alt="Baader logo" /> -->
+    <div class="logo"><h1>Badder ////</h1></div>
+
+    <div class="user">
+      <span class="material-symbols-outlined"> account_circle </span>
+    </div>
   </div>
   <div class="content">
     <div class="nav">
       <ul>
-        <li>Dashboard</li>
+        <li>
+          <span class="material-symbols-outlined"> monitoring </span>Dashboard
+        </li>
+        <li>
+          <span class="material-symbols-outlined"> notifications </span
+          >Notification
+        </li>
       </ul>
     </div>
     <div class="main-content">
