--- a/RecruitingTaskUI/src/app/dashboard/dashboard.component.scss
+++ b/RecruitingTaskUI/src/app/dashboard/dashboard.component.scss
@@ -8,6 +8,15 @@ $sec-color-blue4: #427d9d;
 $sec-color-blue5: #9bbec8;
 $sec-color-blue6: #ddf2fd;
 
+$color-1: #1a2f4b;
+$color-2: #28475c;
+$color-3: #2f8886;
+$color-4: #84c69b;
+$color-5: #2f1b41;
+$color-6: #872341;
+$color-7: #be3144;
+$color-8: #f05941;
+
 .container {
   display: grid;
   grid-template-rows: repeat(2, 1fr);
@@ -17,7 +26,7 @@ $sec-color-blue6: #ddf2fd;
 
   div {
     color: white;
-    background-color: black;
+    background-color: rgb(27, 26, 26);
     padding: 5px;
   }
 }
