Dashboard changes - setting data for charts

--- a/RecruitingTaskUI/src/app/app.component.html
+++ b/RecruitingTaskUI/src/app/app.component.html
@@ -12,7 +12,7 @@
 <div class="main-container">
   <div class="header">
     <!--  <img src="../assets/logo1.png" alt="Baader logo" /> -->
-    <div class="logo"><h1>Badder ////</h1></div>
+    <div class="logo"><h1>BAADER ////</h1></div>
 
     <div class="user">
       <span class="material-symbols-outlined"> account_circle </span>
@@ -27,6 +27,18 @@
         <li>
           <span class="material-symbols-outlined"> notifications </span
           >Notification
+        </li>
+        <li>
+          <span class="material-symbols-outlined"> calendar_month </span
+          >Schedules
+        </li>
+        <li>
+          <span class="material-symbols-outlined"> trending_up </span>Trending
+          Up
+        </li>
+        <li>
+          <span class="material-symbols-outlined"> assignment_turned_in </span
+          >Assignment
         </li>
       </ul>
     </div>
