--- a/RecruitingTaskUI/src/app/dashboard/dashboard.component.scss
+++ b/RecruitingTaskUI/src/app/dashboard/dashboard.component.scss
@@ -1,22 +1,3 @@
-$primary-color-blue1: #496989;
-$primary-color-blue2: #58a399;
-
-$sec-color-blue1: #a8cd9f;
-$sec-color-blue2: #e2f4c5;
-$sec-color-blue3: #164863;
-$sec-color-blue4: #427d9d;
-$sec-color-blue5: #9bbec8;
-$sec-color-blue6: #ddf2fd;
-
-$color-1: #1a2f4b;
-$color-2: #28475c;
-$color-3: #2f8886;
-$color-4: #84c69b;
-$color-5: #2f1b41;
-$color-6: #872341;
-$color-7: #be3144;
-$color-8: #f05941;
-
 .container {
   display: grid;
   grid-template-rows: repeat(2, 1fr);
@@ -25,9 +6,10 @@ $color-8: #f05941;
   height: 100%;
 
   div {
-    color: white;
-    background-color: rgb(27, 26, 26);
+    color: #dae1db;
+    background-color: #00101d;
     padding: 5px;
+    border-radius: 1em;
   }
 }
 
@@ -40,25 +22,23 @@ $color-8: #f05941;
   align-items: stretch;
   align-content: space-around;
   grid-gap: 1em;
-  background-color: #9bbec8;
-  color: black;
+  background-color: #1e2834 !important;
 
   div.entry {
-    background-color: #9bbec8;
+    background-color: #00101d;
     display: grid;
     grid-template-rows: repeat(4, 1fr);
     align-items: center;
-    border: 1px solid grey;
     font-weight: bolder;
     border-radius: 8px;
     label {
       display: flex;
       justify-content: center;
       font-weight: 100;
-      font-size: smaller;
+      font-size: medium;
     }
     .val {
-      background-color: #9bbec8;
+      background-color: #00101d;
       display: flex;
       justify-content: center;
       align-items: center;
