--- a/RecruitingTaskUI/src/app/app.component.html
+++ b/RecruitingTaskUI/src/app/app.component.html
@@ -1,14 +1,3 @@
-<!-- <router-outlet></router-outlet> -->
-<!-- <main>
-  <div class="header"><header></header></div>
-  <div class="main-content">
-    <aside>
-      <nav></nav>
-    </aside>
-    <section><app-dashboard></app-dashboard></section>
-  </div>
-</main> -->
-
 <div class="main-container">
   <div class="header">
     <!--  <img src="../assets/logo1.png" alt="Baader logo" /> -->
@@ -21,16 +10,17 @@
   <div class="content">
     <div class="nav">
       <ul>
-        <li>
-          <span class="material-symbols-outlined"> monitoring </span>Dashboard
+        <li routerLinkActive="active-link">
+          <a [routerLink]="['/home']"
+            ><span class="material-symbols-outlined"> monitoring </span
+            >Dashboard</a
+          >
         </li>
-        <li>
-          <span class="material-symbols-outlined"> notifications </span
-          >Notification
-        </li>
-        <li>
-          <span class="material-symbols-outlined"> calendar_month </span
-          >Schedules
+        <li routerLinkActive="active-link">
+          <a [routerLink]="['/notifications']">
+            <span class="material-symbols-outlined"> notifications </span
+            >Notification</a
+          >
         </li>
         <li>
           <span class="material-symbols-outlined"> trending_up </span>Trending
@@ -43,7 +33,7 @@
       </ul>
     </div>
     <div class="main-content">
-      <app-dashboard></app-dashboard>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
